# drone-optical-ai

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clustering.hpp  live_voxel_mapper.cpp  math.hpp  motion.hpp  navigation.hpp  pose.hpp  ray_marching.hpp  setup.py  voxelmotionviewer.py
.github/workflows/: build.yml
control/: failsafe.hpp  pilot_main.cpp
control/cfc_pilot/: cfc_pilot.hpp  observation.hpp
control/fc_bridge/: fc_bridge.cpp  fc_bridge.hpp  mavlink-router.conf
core/: grid.hpp  live_voxel_mapper.cpp  math.hpp  motion.hpp  navigation.hpp  pose.hpp  ray_marching.hpp
docs/: ARCHITECTURE.md  FLEET.md  HARDWARE.md  RASPBERRY_PI.md  REGULATORY.md  SAFETY.md  TETHER.md  WIRING.md
ground/: Makefile
ground/coordinator/: README.md  coordinator  coordinator.cpp  coordinator.hpp
ground/wireguard/: wg0.example.conf
image/: dronectl
image/config/: config.yaml
image/pi-gen/: README.md  build.sh
image/systemd/: dronectl-pilot.service  dronectl-wizard.service  mavlink-router.service  tether-agent.service
image/wizard/: dnsmasq.conf  hostapd.conf  wizard.py
link/tether_agent/: README.md  tether.proto  tether_agent.cpp  tether_agent.hpp
perception/: README.md  depth_occupancy.hpp  drone_pose_provider.cpp  drone_pose_provider.hpp
server/: README.md  config.yaml  main.py  mission_brain.py  test_validator.py  validator.py  wireguard.example.conf
sim/: quickstart.sh
tests/: README.md  cfc_safety_test.cpp  failsafe_test.cpp  observation_test.cpp  odr_two_tu_main.cpp  odr_two_tu_other.cpp  perception_compile_test.cpp  smoke_test.cpp
training/: README.md  export_onnx.py  requirements.txt  train_cfc.py
